# ticker-takehome

./: .example.env  Brewfile  README.md  Taskfile.yml  WORKINGS.md  pyproject.toml  workings.ipynb
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
ticker_etl/: pyproject.toml
ticker_etl/src/ticker_etl/: main.py  pipeline_stats.py  polygon_util.py
ticker_etl/storage/runs/02b7fd53-4cb4-4f05-a8ea-7036efedcafe/: this.json
ticker_etl/storage/runs/45ba57a1-ee74-48bd-aa23-4244b1620278/: this.json
ticker_etl/storage/runs/588509e7-afd0-4127-92a7-7173fbc201ce/: this.json
ticker_etl/storage/runs/6c7e0b94-452b-49ef-ae11-c984dbe56459/: this.json
ticker_etl/storage/runs/806507d8-bf0e-46a7-ace6-0985cb7fba03/: this.json
ticker_etl/storage/runs/a2841c12-aa00-4cff-adb8-888e49b8cc25/: this.json
ticker_etl/storage/runs/a73fd3ce-7396-4c8c-8b44-396c6d149aec/: this.json
ticker_etl/storage/tickers/AAPL/2024-12-31/: this.json
ticker_etl/storage/tickers/AAPL/2025-02-28/: this.json
ticker_etl/storage/tickers/GOOGL/2025-02-28/: this.json
ticker_etl/storage/tickers/MSFT/2025-02-28/: this.json
ticker_etl/tests/: test_main.py  test_polygon_util.py
